--- a/index.html
+++ b/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
 
-
 <body>
-
     <header>
-        <a href="">
-            WebStudio
-        </a>
-
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -26,47 +21,56 @@
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+11(000)111-11-11"> +11 (000) 111-11-11 </a>
+                    <a href="tel:+110001111111"> +11 (000) 111-11-11 </a>
                 </li>
             </ul>
         </address>
-
     </header>
 
     <main>
-        <h1>
-            Effective Solutions<br />
-            for Your Business
-        </h1>
+        <section>
+            <h1>
+                Effective Solutions
+                for Your Business
+            </h1>
 
-        <button type="button">Order Service</button>
+            <button type="button">Order Service</button>
+        </section>
 
         <section>
+            <h2></h2>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution.</p>
-                </li>
-                <li>
-                    <h2>Punctuality</h2>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
+                    <h3>Strategy</h3>
+                    <p>
+                        Our goal is to identify the business problem to walk away with the
+                        perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h2>Diligence</h2>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.
+
+                    <h3>Punctuality</h3>
+                    <p>
+                        Bring the key message to the brand's audience for the best price
+                        within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
+
+                    <h3>Diligence</h3>
+                    <p>
+                        Research and confirm brands that present the strongest digital
+                        growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>
+                        Design practice focused on digital experiences. We bring forth a
+                        deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
@@ -76,26 +80,26 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="images/img.product-designer.jpg" width="264" alt="product-designer">
+                    <img src="./images/img.product-designer.jpg" alt="product-designer" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="images/img.frontend-developer.jpg" width="264" alt="frontend-developer">
+                    <img src="./images/img.frontend-developer.jpg" alt="frontend-developer" width="264" />
 
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="images/img.marketing.jpg" width="264" alt="marketing">
+                    <img src="./images/img.marketing.jpg" alt="marketing" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="images/img.ui-designer.jpg" width="264" alt="ui-designer">
+                    <img src="./images/img.ui-designer.jpg" alt="ui-designer" width="264" />
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -104,15 +108,13 @@
     </main>
 
     <footer>
-        <a href="">
-            WebStudio
-        </a>
+        <a href="./index.html"> WebStudio </a>
 
-        <p>Increase the flow of customers and<br />
-            sales for your business with digital<br />
-            marketing & growth solutions.</p>
+        <p>
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+        </p>
     </footer>
-
 </body>
 
 </html>
