--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
+    <header class="header">
+        <nav class="nav-header">
+            <a class="logo" href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -18,7 +19,7 @@
             </ul>
         </nav>
 
-        <address>
+        <address class="address-header">
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -105,6 +106,48 @@
                 </li>
             </ul>
         </section>
+
+        <section>
+            <h2>Our Portfolio</h2>
+
+            <ul>
+                <li>
+                    <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+
+                <li>
+                    <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="./images/screen-illustrations.jpg" alt="Illustrations" width="360" height="300">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+
+                <li>
+                    <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
+
     </main>
 
     <footer>
@@ -114,6 +157,7 @@
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
         </p>
+
     </footer>
 </body>
 
